<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_wb_cloudy_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_city" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_error_outline_black_24dp"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_launch_black_24dp"
                android:title="@string/nav_exit" />
        </menu>
    </item>

</menu>
